sidste ændring fra gennemgang

--- a/projekt.html
+++ b/projekt.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css_projekter/galleri.css" />
   </head>
 
-  <body id="top">
+  <body>
     <!-- har tilføjet et id top, så man kommer tilbage til toppen fra en anden sektion.  -->
     <header>
       <div class="logo">
@@ -106,128 +106,129 @@
             </p></strong
           >
         </section>
-        <div class="projekt-grid">
-          <!-- intro -->
-          <a href="#introuge-section" class="projekt-item">
-            <img src="img/introuge.png" alt="Introuge" />
-            <div class="projekt-overlay">
-              <div class="projekt-header">
-                <div class="projekt-titel">INTROUGE</div>
-              </div>
-              <div class="projekt-content">
-                <div class="projekt-undertitel">Første Link</div>
-                <div class="projekt-undertitel">Første Video</div>
-                <div class="projekt-undertitel">Første Kort</div>
-              </div>
-              <div class="projekt-footer">
-                <div class="projekt-tema">TEMA 1</div>
-              </div>
-            </div>
-          </a>
-
-          <!-- første web -->
-          <a href="#mobilsite-section" class="projekt-item">
-            <img
-              src="img/justy488.github.io_website_ (1).webp"
-              alt="første web"
-            />
-            <div class="projekt-overlay">
-              <div class="projekt-header">
-                <div class="projekt-titel">Mobilsite og Website</div>
-              </div>
-              <div class="projekt-content">
-                <div class="projekt-undertitel">
-                  Første hele kodet Hjemmeside
+        <section id="top">
+          <div class="projekt-grid">
+            <!-- intro -->
+            <a href="#introuge-section" class="projekt-item">
+              <img src="img/introuge.png" alt="Introuge" />
+              <div class="projekt-overlay">
+                <div class="projekt-header">
+                  <div class="projekt-titel">INTROUGE</div>
+                </div>
+                <div class="projekt-content">
+                  <div class="projekt-undertitel">Første Link</div>
+                  <div class="projekt-undertitel">Første Video</div>
+                  <div class="projekt-undertitel">Første Kort</div>
+                </div>
+                <div class="projekt-footer">
+                  <div class="projekt-tema">TEMA 1</div>
                 </div>
               </div>
-              <div class="projekt-footer">
-                <div class="projekt-tema">TEMA 2</div>
-              </div>
-            </div>
-          </a>
+            </a>
 
-          <!-- valgfrit emne -->
-          <a href="#emnesite-section" class="projekt-item">
-            <img
-              src="img/justy488.github.io_emnesite_ (3).webp"
-              alt="emneside"
-            />
-            <div class="projekt-overlay">
-              <div class="projekt-header">
-                <div class="projekt-titel">Emnesite</div>
-              </div>
-              <div class="projekt-content">
-                <div class="projekt-undertitel">
-                  Mit eget website valgfrit emne
+            <!-- første web -->
+            <a href="#mobilsite-section" class="projekt-item">
+              <img
+                src="img/justy488.github.io_website_ (1).webp"
+                alt="første web"
+              />
+              <div class="projekt-overlay">
+                <div class="projekt-header">
+                  <div class="projekt-titel">Mobilsite og Website</div>
+                </div>
+                <div class="projekt-content">
+                  <div class="projekt-undertitel">
+                    Første hele kodet Hjemmeside
+                  </div>
+                </div>
+                <div class="projekt-footer">
+                  <div class="projekt-tema">TEMA 2</div>
                 </div>
               </div>
-              <div class="projekt-footer">
-                <div class="projekt-tema">TEMA 3</div>
-              </div>
-            </div>
-          </a>
-        </div>
+            </a>
 
-        <div class="projekt-grid">
-          <!-- nødsituation med løsning-->
-          <a href="#emergency-section" class="projekt-item">
-            <img
-              src="img/justy488.github.io_parallelunivers-main_.webp"
-              alt="Nødsituation"
-            />
-            <div class="projekt-overlay">
-              <div class="projekt-header">
-                <div class="projekt-titel">Emergencysite</div>
-              </div>
-              <div class="projekt-content">
-                <div class="projekt-undertitel">
-                  En Nødsituation En unik løsning
+            <!-- valgfrit emne -->
+            <a href="#emnesite-section" class="projekt-item">
+              <img
+                src="img/justy488.github.io_emnesite_ (3).webp"
+                alt="emneside"
+              />
+              <div class="projekt-overlay">
+                <div class="projekt-header">
+                  <div class="projekt-titel">Emnesite</div>
+                </div>
+                <div class="projekt-content">
+                  <div class="projekt-undertitel">
+                    Mit eget website valgfrit emne
+                  </div>
+                </div>
+                <div class="projekt-footer">
+                  <div class="projekt-tema">TEMA 3</div>
                 </div>
               </div>
-              <div class="projekt-footer">
-                <div class="projekt-tema">TEMA 4</div>
-              </div>
-            </div>
-          </a>
+            </a>
+          </div>
 
-          <!-- to forskellige emner -->
-          <a href="#toemner-section" class="projekt-item">
-            <img src="img/toemner04.png" alt="to emner" />
-            <div class="projekt-overlay">
-              <div class="projekt-header">
-                <div class="projekt-titel">
-                  Sandkassesite og Virksomhedssite
+          <div class="projekt-grid">
+            <!-- nødsituation med løsning-->
+            <a href="#emergency-section" class="projekt-item">
+              <img
+                src="img/justy488.github.io_parallelunivers-main_.webp"
+                alt="Nødsituation"
+              />
+              <div class="projekt-overlay">
+                <div class="projekt-header">
+                  <div class="projekt-titel">Emergencysite</div>
+                </div>
+                <div class="projekt-content">
+                  <div class="projekt-undertitel">
+                    En Nødsituation En unik løsning
+                  </div>
+                </div>
+                <div class="projekt-footer">
+                  <div class="projekt-tema">TEMA 4</div>
                 </div>
               </div>
-              <div class="projekt-content">
-                <div class="projekt-undertitel">
-                  Redesign & Fokus på Indhold
+            </a>
+
+            <!-- to forskellige emner -->
+            <a href="#toemner-section" class="projekt-item">
+              <img src="img/toemner04.png" alt="to emner" />
+              <div class="projekt-overlay">
+                <div class="projekt-header">
+                  <div class="projekt-titel">
+                    Sandkassesite og Virksomhedssite
+                  </div>
+                </div>
+                <div class="projekt-content">
+                  <div class="projekt-undertitel">
+                    Redesign & Fokus på Indhold
+                  </div>
+                </div>
+                <div class="projekt-footer">
+                  <div class="projekt-tema">TEMA 5</div>
                 </div>
               </div>
-              <div class="projekt-footer">
-                <div class="projekt-tema">TEMA 5</div>
-              </div>
-            </div>
-          </a>
+            </a>
 
-          <!-- min portfolio, når den er færdig eller andet -->
-          <a href="#portfolio-section" class="projekt-item">
-            <img src="img/sort.webp" alt="portfolio" />
-            <div class="projekt-overlay">
-              <div class="projekt-header">
-                <div class="projekt-titel">Kommer Snart...</div>
+            <!-- min portfolio, når den er færdig eller andet -->
+            <a href="#portfolio-section" class="projekt-item">
+              <img src="img/sort.webp" alt="portfolio" />
+              <div class="projekt-overlay">
+                <div class="projekt-header">
+                  <div class="projekt-titel">Kommer Snart...</div>
+                </div>
+                <div class="projekt-content">
+                  <div class="projekt-undertitel">Portfolio</div>
+                </div>
+                <div class="projekt-footer">
+                  <div class="projekt-tema">TEMA 6</div>
+                </div>
               </div>
-              <div class="projekt-content">
-                <div class="projekt-undertitel">Portfolio</div>
-              </div>
-              <div class="projekt-footer">
-                <div class="projekt-tema">TEMA 6</div>
-              </div>
-            </div>
-          </a>
-        </div>
+            </a>
+          </div>
+        </section>
       </section>
-
       <!-- Tema beskrivelsen,  proces løsning, input -->
       <!-- INTROUGE -->
       <section id="introuge-section" class="projekt-detail bon">
@@ -246,7 +247,7 @@
               </div>
             </div>
             <div>
-              <h3>Projektbeskrivelse</h3>
+              <strong> <h3>Projektbeskrivelse</h3></strong>
               <p>
                 Dette projekt var mit første skridt ind i digital formidling.
                 eksperimenterede med links, video og visuelle elementer.
@@ -282,12 +283,14 @@
                 forståelse for digital formidling samt brug af versionsstyring
                 og forskellige medier i ét samlet projekt.
               </p>
+              <a href="#top" class="tilbage-link">← Tilbage til projekter</a>
               <a href="https://youtu.be/ycvxjUreJIg" class="tilbage-link"
                 >Se Titelvideo</a
-              ><a href="https://youtu.be/ycvxjUreJIg" class="tilbage-link"
-                >Se min Github side</a
+              ><a
+                href="https://github.com/Justy488?tab=repositories"
+                class="tilbage-link"
+                >Se min Github repo side</a
               >
-              <a href="#top" class="tilbage-link">← Tilbage til projekter</a>
             </div>
           </div>
         </div>
@@ -342,13 +345,11 @@
               <div class="forsidefoto">
                 <img src="img/førsteweb04.png" alt="Introuge projekt" />
               </div>
-              <a href="#top" class="tilbage-link">← Tilbage til projekter</a>
+              <a href="#top" class="tilbage-link">← Tilbage</a>
               <a href="https://justy488.github.io/website/" class="tilbage-link"
                 >Se mit første web</a
               >
-              <a
-                href="https://github.com/Justy488?tab=repositories"
-                class="tilbage-link"
+              <a href="https://github.com/Justy488/website" class="tilbage-link"
                 >Se min Github repo</a
               >
             </div>
@@ -402,7 +403,7 @@
               <div class="forsidefoto">
                 <img src="img/emnesite02.png" alt="Emnesite projekt" />
               </div>
-              <a href="#top" class="tilbage-link">← Tilbage til projekter</a>
+              <a href="#top" class="tilbage-link">← Tilbage</a>
               <a
                 href=" https://justy488.github.io/emnesite/"
                 class="tilbage-link"
@@ -430,7 +431,9 @@
                 nødsituation. Jeg arbejdede med brugercentreret design og skulle
                 sikre, at informationen var klar, tilgængelig og handlekraftig.
                 Jeg blev introduceret Adobe Illustrator (pentool, Vektorgrafik &
-                svg) og Javascript, som var store komponenter i opgaven.
+                svg) og Javascript, som var store komponenter i opgaven. Især da
+                jeg skulle finde på gode ideer til en genereret historie omkring
+                en alien invasion.
               </p>
               <h3>Proces & Læring</h3>
               <p>
@@ -451,12 +454,12 @@
               <div class="forsidefoto">
                 <img src="img/emergency02.png" alt="Emergency projekt" />
               </div>
-              <a href="#top" class="tilbage-link">← Tilbage til projekter</a>
+              <a href="#top" class="tilbage-link">← Tilbage</a>
               <a
                 href="https://justy488.github.io/parallelunivers-main/"
                 class="tilbage-link"
-                >Se Projektet</a
-              >
+                >Se Generatorløsning
+              </a>
             </div>
 
             <div class="forsidefoto">
@@ -518,18 +521,19 @@
               <div class="forsidefoto">
                 <img src="img/toemnerproces01.png" alt="To emner projekt" />
               </div>
-
-              <a
-                href=" https://justy488.github.io/tema5_sandkassesite/"
-                class="tilbage-link"
-                >Se 1 Projekt</a
-              >
-              <a
-                href="https://justy488.github.io/tema-5_part2/"
-                class="tilbage-link"
-                >Se 2 Projekt</a
-              >
-              <a href="#top" class="tilbage-link">← Tilbage til projekter</a>
+              <div>
+                <a
+                  href=" https://justy488.github.io/tema5_sandkassesite/"
+                  class="tilbage-link"
+                  >Se 1 Projekt</a
+                >
+                <a
+                  href="https://justy488.github.io/tema-5_part2/"
+                  class="tilbage-link"
+                  >Se 2 Projekt</a
+                >
+                <a href="#top" class="tilbage-link">← Tilbage</a>
+              </div>
             </div>
           </div>
         </div>
