ændret hero igen

--- a/index.html
+++ b/index.html
@@ -69,7 +69,12 @@
     <main>
       <section class="hero">
         <div class="hero-section">
-          <video autoplay="" src="img/titelvid04.mp4" width="100%"></video>
+          <video
+            autoplay=""
+            loop=""
+            src="img/titelvid03.mp4"
+            width="100%"
+          ></video>
         </div>
 
         <h1></h1>
