aller aller aller sidste rettelse

--- a/aboutme.html
+++ b/aboutme.html
@@ -156,13 +156,12 @@
         </div>
         <strong><p>Hvad jeg har fået ud af semesteret</p></strong>
         <p>
-          Hvad jeg har fået ud af semesteret Dette semester har styrket mig
-          inden for multimediedesign. Det har givet mig forståelse for hele
-          processen fra idé til færdig digital løsning. Jeg har arbejdet med
-          både design, kodning og indholdsstrategi og har lært, hvordan visuelle
-          valg, struktur og brugeroplevelse hænger tæt sammen. Gennem
-          projekterne er jeg blevet mere sikker i at omsætte kreative idéer til
-          funktionelle løsninger og arbejde mere målrettet.
+          Dette semester har styrket mig inden for multimediedesign. Det har
+          givet mig forståelse for hele processen fra idé til færdig digital
+          løsning. Jeg har arbejdet med både design, kodning og indholdsstrategi
+          og har lært, hvordan visuelle valg, struktur og brugeroplevelse hænger
+          tæt sammen. Gennem projekterne er jeg blevet mere sikker i at omsætte
+          kreative idéer til funktionelle løsninger og arbejde mere målrettet.
         </p>
         <p>
           Samtidig har jeg opnået erfaring med værktøjer, arbejdsmetoder og
